--- a/src/scss/utility/_global.scss
+++ b/src/scss/utility/_global.scss
@@ -1,8 +1,41 @@
 body {
+  // font-family: 'Inter', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1.3;
 }
 
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1238px;
+  max-width: 1246px;
+}
+
+.btn {
+  display: inline;
+  background: linear-gradient(276.41deg, #016ca8 -7%, #61b5e4 77.16%);
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 18px 45px;
+  transition: 0.3s all;
+  &--green {
+    background: $colorAccent;
+    &:hover {
+      background: #038d74;
+    }
+  }
+  &--blue {
+    &:hover {
+      // background: #016ca8;
+      background: linear-gradient(#016ca8 100%, #61b5e4 0%);
+    }
+  }
+  &:hover {
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 }
