services & about & banner

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,6 @@
 @import "./utility/global";
 
 @import "./modules/header";
+@import "./modules/services";
+@import "./modules/about";
+@import "./modules/banner";
