--- a/src/scss/utility/_global.scss
+++ b/src/scss/utility/_global.scss
@@ -39,3 +39,9 @@ body {
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
+
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  color: $colorTitle;
+}
