--- a/src/scss/modules/_about.scss
+++ b/src/scss/modules/_about.scss
@@ -6,14 +6,15 @@
     margin-bottom: 35px;
   }
   &__items {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 392px);
+    grid-template-rows: 348px;
+    gap: 20px;
   }
   &__item {
-    max-width: 392px;
     text-align: center;
     background: #ffffff;
-    padding: 67px 28px 35px;
+    padding: 35px 28px 35px;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.09);
     border-radius: 10px;
   }
@@ -33,5 +34,53 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .about {
+    &__items {
+      grid-template-columns: repeat(2, 354px);
+      grid-template-rows: 348px;
+    }
+    &__item-title {
+      font-size: 20px;
+      line-height: 30px;
+    }
+    &__item-text {
+      font-size: 14px;
+      line-height: 25px;
+    }
+    &__item {
+      &-third {
+        display: grid;
+        grid-row: 2;
+        grid-column: 1/3;
+        .about__item-text {
+          max-width: 396px;
+          text-align: center;
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .about {
+    &__items {
+      grid-template-columns: 320px;
+    }
+    &__inner {
+      display: flex;
+      margin: 0 auto;
+      justify-content: center;
+    }
+    &__item {
+      &-third {
+        grid-row: auto;
+        grid-column: auto;
+      }
+    }
   }
 }
