--- a/src/scss/modules/_banner.scss
+++ b/src/scss/modules/_banner.scss
@@ -30,3 +30,41 @@
     font-size: 20px;
   }
 }
+
+@media (max-width: 768px) {
+  .banner {
+    &__title {
+      margin-bottom: 20px;
+      font-size: 36px;
+      line-height: 60px;
+    }
+    &__subtitle {
+      font-size: 16px;
+      line-height: 30px;
+      margin: 0 auto;
+      margin-bottom: 20px;
+      max-width: 491px;
+    }
+    &__btn {
+      padding: 20px 37px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .banner {
+    &__title {
+      font-size: 24px;
+      line-height: 35px;
+      margin-bottom: 27px;
+    }
+    &__subtitle {
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 27px;
+    }
+    &__btn {
+      padding: 18px 34px;
+    }
+  }
+}
