investors, result, prices sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,7 @@
 @import "./modules/about";
 @import "./modules/banner";
 @import "./modules/market";
+@import "./modules/accelator";
+@import "./modules/investors";
+@import "./modules/result";
+@import "./modules/prices";
