programm, whoarewe sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,5 @@
 @import "./modules/investors";
 @import "./modules/result";
 @import "./modules/prices";
+@import "./modules/programm";
+@import "./modules/whoarewe";
