--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,3 +16,8 @@
 @import "./modules/programm";
 @import "./modules/whoarewe";
 @import "./modules/experts";
+@import "./modules/partners";
+@import "./modules/community";
+@import "./modules/events";
+@import "./modules/questions";
+@import "./modules/footer";
